--- a/assets/sass/3-component/_main-header.sass
+++ b/assets/sass/3-component/_main-header.sass
@@ -455,7 +455,7 @@
 .cookie-active
 	padding-top: 30px
 	transition: 0.3s
-	.home-header
+	.home-header, .main-header
 		top: 30px !important
 
 .iscookie
