layout grid and gutter fix

--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -322,6 +322,9 @@ hr
 .mr-auto
   margin-right: auto
 
+.mv-15
+  margin: 15px 0
+
 $p-0:                 0px
 $p-5:                 5px
 $p-10:                10px
