--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1934,8 +1934,8 @@ pre code {
 }
 
 .container {
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 8px;
+  padding-left: 8px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -1948,23 +1948,23 @@ pre code {
 }
 @media (min-width: 768px) {
   .container {
-    width: 750px;
+    width: 736px;
   }
 }
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    width: 956px;
   }
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 1156px;
   }
 }
 
 .container-fluid {
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 8px;
+  padding-left: 8px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -1977,8 +1977,8 @@ pre code {
 }
 
 .row {
-  margin-right: -15px;
-  margin-left: -15px;
+  margin-right: -8px;
+  margin-left: -8px;
 }
 .row:before, .row:after {
   display: table;
@@ -2000,8 +2000,8 @@ pre code {
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   position: relative;
   min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 8px;
+  padding-left: 8px;
 }
 
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
@@ -3608,8 +3608,8 @@ select[multiple].input-lg,
   min-height: 27px;
 }
 .form-horizontal .form-group {
-  margin-right: -15px;
-  margin-left: -15px;
+  margin-right: -8px;
+  margin-left: -8px;
 }
 .form-horizontal .form-group:before, .form-horizontal .form-group:after {
   display: table;
@@ -3626,7 +3626,7 @@ select[multiple].input-lg,
   }
 }
 .form-horizontal .has-feedback .form-control-feedback {
-  right: 15px;
+  right: 8px;
 }
 @media (min-width: 768px) {
   .form-horizontal .form-group-lg .control-label {
@@ -4658,8 +4658,8 @@ tbody.collapse.in {
 }
 
 .navbar-collapse {
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 8px;
+  padding-left: 8px;
   overflow-x: visible;
   border-top: 1px solid transparent;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
@@ -4735,8 +4735,8 @@ tbody.collapse.in {
 .container > .navbar-collapse,
 .container-fluid > .navbar-header,
 .container-fluid > .navbar-collapse {
-  margin-right: -15px;
-  margin-left: -15px;
+  margin-right: -8px;
+  margin-left: -8px;
 }
 @media (min-width: 768px) {
   .container > .navbar-header,
@@ -4761,7 +4761,7 @@ tbody.collapse.in {
 .navbar-brand {
   float: left;
   height: 50px;
-  padding: 15px 15px;
+  padding: 15px 8px;
   font-size: 18px;
   line-height: 20px;
 }
@@ -4773,7 +4773,7 @@ tbody.collapse.in {
 }
 @media (min-width: 768px) {
   .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
-    margin-left: -15px;
+    margin-left: -8px;
   }
 }
 
@@ -4781,7 +4781,7 @@ tbody.collapse.in {
   position: relative;
   float: right;
   padding: 9px 10px;
-  margin-right: 15px;
+  margin-right: 8px;
   margin-top: 8px;
   margin-bottom: 8px;
   background-color: transparent;
@@ -4808,7 +4808,7 @@ tbody.collapse.in {
 }
 
 .navbar-nav {
-  margin: 7.5px -15px;
+  margin: 7.5px -8px;
 }
 .navbar-nav > li > a {
   padding-top: 10px;
@@ -4851,9 +4851,9 @@ tbody.collapse.in {
 }
 
 .navbar-form {
-  padding: 10px 15px;
-  margin-right: -15px;
-  margin-left: -15px;
+  padding: 10px 8px;
+  margin-right: -8px;
+  margin-left: -8px;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
@@ -4966,8 +4966,8 @@ tbody.collapse.in {
 @media (min-width: 768px) {
   .navbar-text {
     float: left;
-    margin-right: 15px;
-    margin-left: 15px;
+    margin-right: 8px;
+    margin-left: 8px;
   }
 }
 
@@ -4978,7 +4978,7 @@ tbody.collapse.in {
 
   .navbar-right {
     float: right !important;
-    margin-right: -15px;
+    margin-right: -8px;
   }
   .navbar-right ~ .navbar-right {
     margin-right: 0;
@@ -5442,8 +5442,8 @@ a.badge:hover, a.badge:focus {
   border-top-color: #d5d5d5;
 }
 .container .jumbotron, .container-fluid .jumbotron {
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 8px;
+  padding-left: 8px;
   border-radius: 6px;
 }
 .jumbotron .container {
@@ -7846,6 +7846,10 @@ a {
   margin-right: auto;
 }
 
+.mv-15 {
+  margin: 15px 0;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -7933,7 +7937,7 @@ a {
   width: 100%;
   float: left;
   margin-top: 60px;
-  padding: 10px;
+  padding: 16px;
 }
 
 .left-sidebar, .right-sidebar {
@@ -7948,17 +7952,17 @@ a {
 
 .left-sidebar {
   float: left;
-  margin-right: 10px;
+  margin-right: 16px;
 }
 
 .right-sidebar {
   float: right;
   background: #fff;
-  margin-left: 10px;
+  margin-left: 16px;
 }
 
 .center-content {
-  width: calc(100% - 420px);
+  width: calc(100% - 432px);
   float: left;
 }
 
@@ -9259,6 +9263,7 @@ i.color-btn {
   overflow: hidden;
   text-overflow: ellipsis;
   max-height: 40px;
+  min-height: 40px;
 }
 
 .empty-card {
@@ -11627,8 +11632,8 @@ ul.simple-list li:last-of-type {
   color: #7E8EA4;
 }
 .right-wrapper .right-content .chart-holder:before {
-  width: 82px;
-  height: 82px;
+  width: 96px;
+  height: 96px;
   background: transparent;
   border: 4px solid #fff;
   content: "";
@@ -12191,7 +12196,7 @@ ul.simple-list li:last-of-type {
 .search-container {
   width: 100%;
   float: left;
-  padding: 80px 0px 40px 0;
+  padding: 80px 8px 40px 8px;
 }
 .search-container .slick-slider .slick-prev:before, .search-container .slick-slider .slick-next:before {
   font-size: 24px !important;
@@ -12210,6 +12215,7 @@ ul.simple-list li:last-of-type {
   width: 100%;
   float: left;
   list-style: none;
+  margin-bottom: 0px;
 }
 .search-tab li {
   width: 20%;
@@ -12289,6 +12295,7 @@ ul.simple-list li:last-of-type {
 .search-card .card-img img {
   width: 100%;
   height: 100%;
+  min-height: 200px;
 }
 @media (max-width: 1280px) {
   .search-card .card-img {
@@ -12321,7 +12328,6 @@ ul.simple-list li:last-of-type {
 .slick-slider {
   width: 100%;
   float: left;
-  margin-bottom: 15px;
   position: relative;
 }
 .slick-slider .card {
@@ -12332,10 +12338,10 @@ ul.simple-list li:last-of-type {
   z-index: 999;
 }
 .slick-slider .slick-arrow.slick-prev {
-  left: 0px !important;
+  left: 5px !important;
 }
 .slick-slider .slick-arrow.slick-next {
-  right: 0px !important;
+  right: 5px !important;
 }
 
 .custom-slider {
