--- a/assets/sass/3-component/_search.scss
+++ b/assets/sass/3-component/_search.scss
@@ -1,7 +1,7 @@
 .search-container{
     width: 100%;
     float: left;
-    padding: 80px 0px 40px 0;
+    padding: 80px 8px 40px 8px;
     .slick-slider{
         .slick-prev, .slick-next{
             &:before{
@@ -24,6 +24,7 @@
     width: 100%;
     float: left;
     list-style: none;
+    margin-bottom: 0px;
     li{
         width: 20%;
         float: left;
@@ -98,6 +99,7 @@
         img{
             width: 100%;
             height: 100%;
+            min-height: 200px;
         }
     }
     @media (max-width: 1280px){
