--- a/assets/sass/3-component/_slickslider.scss
+++ b/assets/sass/3-component/_slickslider.scss
@@ -1,7 +1,7 @@
 .slick-slider{
     width: 100%;
     float: left;
-    margin-bottom: 15px;
+    // margin-bottom: 15px;
     position: relative;
     .card{
         margin-bottom: 10px;
@@ -10,10 +10,10 @@
     .slick-arrow{
         z-index: 999;
         &.slick-prev{
-            left: 0px !important;
+            left: 5px !important;
         }
         &.slick-next{
-            right: 0px !important;
+            right: 5px !important;
         }
     }
 }
