--- a/assets/sass/1-tools/_vars.sass
+++ b/assets/sass/1-tools/_vars.sass
@@ -63,6 +63,9 @@ $mdeium-black:                      #303030
 $deep-gray:                         #232323
 $medium-gray:                       #F2F2F2
 
+$pagination-bg:                     #CFD1D3
+$pagination-active:                 #B0B6BC
+
 
 $primary:       					$default !default
 $secondary:     					$secondary-color !default
