--- a/assets/sass/3-component/_topbar.scss
+++ b/assets/sass/3-component/_topbar.scss
@@ -27,6 +27,7 @@
         }
         i{
             margin-right: 10px;
+            color: $black;
         }
         h2{
             margin: 0px;
@@ -46,7 +47,10 @@
         float: right;  
         .dropdown-toggle{
             cursor: pointer;
-        }     
+        }  
+        span{
+            color: $secondary-text;
+        }   
     }
 }
 .topbar-list{
