--- a/assets/sass/1-tools/_vars.sass
+++ b/assets/sass/1-tools/_vars.sass
@@ -63,8 +63,10 @@ $mdeium-black:                      #303030
 $deep-gray:                         #232323
 $medium-gray:                       #F2F2F2
 
+$pagination-border:                 #CED1DA
 $pagination-bg:                     #CFD1D3
 $pagination-active:                 #B0B6BC
+$pagination-shadow:                 0 2px 0px #C0C1C1
 
 
 $primary:       					$default !default
