text-white color css

--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -21,6 +21,8 @@ a
   color: $danger !important
 .gold
   color: $gold !important
+.text-white
+  color: $white
 
 .primary-bg
   background: $primary
