--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -22,7 +22,7 @@ a
 .gold
   color: $gold !important
 .text-white
-  color: $white
+  color: $white !important
 
 .primary-bg
   background: $primary
