--- a/assets/sass/3-component/_topbar.scss
+++ b/assets/sass/3-component/_topbar.scss
@@ -17,6 +17,10 @@
             }
         }
     }
+    &.bg-gray{
+        background: $secondary-color;
+        color: $white !important;
+    }
     .topbar-left{
         width: auto;
         float: left;
