--- a/components/index.html
+++ b/components/index.html
@@ -135,7 +135,7 @@
     </header>
 
     <div class="container-fluid">
-        <div class="row mb-20">
+        <div class="row mt-50 mb-20">
             <div class="col-lg-2 col-md-2">
                 <h4>Colorcode</h4>
                 <ul class="colorcode">
@@ -146,6 +146,7 @@
                     <li class="info-bg">Info color - #00C4E8</li>
                     <li class="danger-bg">Danger color - #FF1561</li>
                     <li class="orange-gradient">Orange gradient </li>
+                    <li class="black-bg text-white">Black color - #344051</li>
                     <li class="silver-gradient">Silver gradient</li>
                     <li class="gold-bg">Gold color</li>
                 </ul>
