--- a/assets/sass/3-component/_topbar.scss
+++ b/assets/sass/3-component/_topbar.scss
@@ -32,6 +32,7 @@
         i{
             margin-right: 10px;
             color: $black;
+            font-size: $font-xl;
         }
         h2{
             margin: 0px;
