--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11314,9 +11314,11 @@ i.color-btn {
   text-align: right;
 }
 .ng-confirm-box .ng-confirm-buttons .btn {
-  margin-bottom: 0px;
+  margin-bottom: 0px !important;
   font-size: 16px !important;
   font-weight: 400 !important;
+  padding: 7px 15px !important;
+  margin-left: 30px !important;
 }
 
 .progress-wrapper {
